--- a/index.html
+++ b/index.html
@@ -233,37 +233,30 @@ button {
 </section>
 
 <!-- CONTACT -->
-<section class="section" id="contact">
-  <img src="photo-repair-2.jpg" class="repair-photo">
-  <h2>Contact Us</h2>
-  <p><strong>Fill out form, Text or Call 973-975-8640</strong></p>
+<<form action="https://formspree.io/f/xkoogkpz" method="POST">
 
-  <form name="contact" method="POST" data-netlify="true" action="/thank-you.html">
-    <input type="hidden" name="form-name" value="contact">
+  <input type="text" name="name" placeholder="Name" required>
+  <input type="tel" name="phone" placeholder="Phone Number" required>
+  <input type="email" name="email" placeholder="Email" required>
+  <input type="text" name="address" placeholder="Service Address" required>
+  <input type="date" name="date">
 
-    <input type="text" name="name" placeholder="Name" required>
-    <input type="tel" name="phone" placeholder="Phone Number" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="text" name="address" placeholder="Service Address" required>
-    <input type="date" name="date">
+  <select name="time">
+    <option>Preferred Time of Day</option>
+    <option>Morning</option>
+    <option>Afternoon</option>
+    <option>Evening</option>
+  </select>
 
-    <select name="time">
-      <option>Preferred Time of Day</option>
-      <option>Morning</option>
-      <option>Afternoon</option>
-      <option>Evening</option>
-    </select>
+  <select name="service">
+    <option>Service Requested</option>
+    <option>Dive and Patch</option>
+    <option>Emergency Service</option>
+  </select>
 
-    <select name="service">
-      <option>Service Requested</option>
-      <option>Dive and Patch</option>
-      <option>Emergency Service</option>
-    </select>
+  <textarea name="details" rows="5" placeholder="Additional Details"></textarea>
+  <button type="submit">Submit</button>
 
-    <textarea name="details" rows="5" placeholder="Additional Details"></textarea>
-    <button type="submit">Submit</button>
-  </form>
-</section>
+</form>
 
-</body>
-</html>
+
