--- a/index.html
+++ b/index.html
@@ -265,9 +265,11 @@ button {
   </form>
 </section>
 <p style="text-align:center; font-size:14px; margin-top:40px;">
-  <a href="disclaimer.html">Affiliate Disclosure & Privacy Policy</a>
+  <a href="Disclaimer.html">Affiliate Disclosure & Privacy Policy</a>
+
 </p>
 
 
 </body>
 </html>
+
