--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="description" content="Residential underwater vinyl pool liner repair in North Jersey. Pool Aid LLC serves homeowners north of the Raritan River with fast, no-drain pool liner patching services.">
+
 <meta charset="UTF-8">
 <title>Pool Aid LLC</title>
 
@@ -265,11 +267,39 @@ button {
   </form>
 </section>
 <p style="text-align:center; font-size:14px; margin-top:40px;">
-  <a href="Disclaimer.html">Affiliate Disclosure & Privacy Policy</a>
-
+  <a href="disclaimer.html">Affiliate Disclosure & Privacy Policy</a>
 </p>
+    <!-- Hidden SEO Service Area Section -->
+    <section style="display:none;">
+      <h2>Residential Pool Liner Repair – North Jersey</h2>
 
+      <p>
+        Pool Aid LLC provides residential underwater vinyl pool liner repair services
+        to homeowners north of the Raritan River in New Jersey.
+      </p>
+
+      <p>
+        Service areas include but are not limited to:
+        Bridgewater, Hillsborough, Somerville, Bound Brook, Raritan, Piscataway,
+        Edison, Metuchen, Woodbridge, Scotch Plains, Fanwood, Westfield,
+        Cranford, Clark, Linden, Rahway, Plainfield, South Plainfield,
+        North Plainfield, Dunellen, Middlesex, Watchung, Warren,
+        Berkeley Heights, New Providence, Summit, Springfield,
+        Millburn, Short Hills, Livingston, Maplewood, South Orange,
+        Montclair, Bloomfield, Verona, Cedar Grove, Nutley,
+        Clifton, Little Falls, Wayne, Totowa, Hawthorne,
+        Ridgewood, Paramus, Fair Lawn, Teaneck, Englewood,
+        Fort Lee, Hackensack, Bergenfield, Dumont, Tenafly.
+      </p>
+
+      <p>
+        Pool Aid LLC specializes exclusively in residential swimming pools and does
+        not service commercial or public pool facilities.
+      </p>
+    </section>
 
 </body>
 </html>
+
+
 
